--- a/Less/index.html
+++ b/Less/index.html
@@ -37,6 +37,11 @@
             <td>Indian</td>
         </tr>
     </table>
+    <script>
+            less = {
+                javascriptEnabled: true
+            };
+    </script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
   </body>
 </html>
