Added less with node

--- a/LessWithNode/index.html
+++ b/LessWithNode/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet/less" href="css/init.less" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <div class="container" id="div1">
@@ -37,11 +37,5 @@
             <td>Indian</td>
         </tr>
     </table>
-    <script>
-            less = {
-                javascriptEnabled: true
-            };
-    </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
   </body>
 </html>
