--- a/LessWithNode/index.html
+++ b/LessWithNode/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/styles-white.css" />
+    <link rel="stylesheet" href="css/styles-black.css" disabled/>
   </head>
   <body>
     <div class="container" id="div1">
@@ -37,5 +38,8 @@
             <td>Indian</td>
         </tr>
     </table>
+    <button onclick="toggleTheme()">black</button>
+    <button onclick="toggleTheme()">white</button>
+    <script src="./js/themes.js"></script>
   </body>
 </html>
