Update logic for theme

--- a/LessWithNode/index.html
+++ b/LessWithNode/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <link rel="stylesheet" href="css/styles-white.css" />
-    <link rel="stylesheet" href="css/styles-black.css" disabled/>
+    <link title="white" rel="stylesheet" href="css/styles-white.css" />
+    <link title="black" rel="stylesheet" href="css/styles-black.css" disabled/>
   </head>
   <body>
     <div class="container" id="div1">
@@ -38,8 +38,8 @@
             <td>Indian</td>
         </tr>
     </table>
-    <button onclick="toggleTheme()">black</button>
-    <button onclick="toggleTheme()">white</button>
+    <button onclick="setTheme('black')">black</button>
+    <button onclick="setTheme('white')">white</button>
     <script src="./js/themes.js"></script>
   </body>
 </html>
